# cc-pane

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: backfill-macos-updater.yml  ci.yml  deploy-docs.yml  release.yml
cc-cli-adapters/: Cargo.toml
cc-cli-adapters/assets/opencode/: ccpanes-plugin.js
cc-cli-adapters/src/: claude.rs  codex.rs  cursor.rs  fs_atomic.rs  gemini.rs  glm.rs  kimi.rs  lib.rs  opencode.rs
cc-panes-api/src/: error.rs
cc-panes-cli-hook/: Cargo.toml
cc-panes-cli-hook/src/: main.rs  notify.rs  plan_archive.rs  session_start.rs
cc-panes-cli-hook/src/common/: env.rs  http.rs  mod.rs  orchestrator.rs  stdin.rs
cc-panes-cli-hook/src/events/: dispatch.rs  mod.rs
cc-panes-core/src/: constants.rs
cc-panes-core/tests/: manual_codex_osc_windows.rs
cc-panes-daemon/: Cargo.toml
cc-panes-daemon/src/: main.rs  self_check.rs  server.rs  session_reaper.rs  ws_emitter.rs
cc-panes-mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
cc-panes-mobile/lib/: main.dart
cc-panes-web/: Cargo.toml
cc-panes-web/src/: main.rs  state.rs  web_auth.rs  ws_emitter.rs  ws_handler.rs
cc-panes-web/src/routes/: agent_sessions.rs  agent_sessions_tests.rs  auth_tests.rs  git.rs  git_tests.rs  history.rs  history_tests.rs  journal.rs  journal_tests.rs  launch_profiles.rs  launch_profiles_tests.rs  local_history.rs  local_history_tests.rs  mcp.rs  mcp_tests.rs  memory.rs  memory_tests.rs  mod.rs  plans_tests.rs  process.rs  process_tests.rs  resources.rs  resources_tests.rs  runner.rs  runner_tests.rs  skills.rs  skills_tests.rs  ssh_machines.rs  ssh_machines_tests.rs  static_files.rs  static_files_tests.rs  system.rs  system_tests.rs  terminal.rs  usage_stats.rs  usage_stats_tests.rs  workflow.rs  workflow_tests.rs
cc-panes-web/static/: index.html
docs/: 17-persistent-terminal-daemon.md  18-mcp-startup-token-analysis.md  20-orphan-session-reconcile.md  index.md  multica-reference-analysis.md  references.md
docs/.vitepress/: config.ts
docs/bugs/: terminal-output-flood-freeze.md
scripts/: build-hook.cjs  copy-hook.cjs  smoke-daemon-web-launch-profiles.mjs  smoke-daemon-web-local-history.mjs  smoke-daemon-web-mcp.mjs  smoke-daemon-web-memory.mjs  smoke-daemon-web-runner.mjs  smoke-daemon-web-skills.mjs  smoke-daemon-web-ssh-machines.mjs  smoke-daemon-web-usage-stats.mjs  smoke-daemon-web-workspace-migration.mjs  smoke-daemon-web.mjs
skill-market/: index.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/bundled-claude-config/default-skills/: launch-task.md
src-tauri/resources/ccchan/: pets-manifest.json
src-tauri/resources/ccchan/ye-shunguang-jk/: pet.json
src-tauri/resources/claude-bundle/: CLAUDE.md
src-tauri/resources/claude-bundle/.claude/commands/ccbook/: launch-task.md  parallel.md  plan2codexwsl.md  planreview.md  plantocc.md  plantocodex.md
src-tauri/resources/claude-bundle/default-skills/: launch-task.md  manifest.json  memory-dual-write.md  parallel-advanced.md  plan2codexwsl.md  planreview.md  plantocc.md  plantocodex.md  recall.md
src-tauri/src/: emitter.rs  lib.rs
src-tauri/src/commands/: ccchan_commands.rs  claude_commands.rs  clipboard_commands.rs  filesystem_commands.rs  git_commands.rs  history_commands.rs  layout_snapshot_commands.rs  mod.rs  provider_commands.rs  screenshot_commands.rs  settings_commands.rs  skill_commands.rs  tailscale_commands.rs  task_binding_commands.rs  terminal_commands.rs  usage_stats_commands.rs  web_access_commands.rs  window_commands.rs
src-tauri/src/services/: ccchan_service.rs  launch_backfill_service.rs  mod.rs  notification_service.rs  orchestrator_service.rs  resume_binding_service.rs  screenshot_overlay.rs  session_prompt_service.rs  skill_market_service.rs  tailscale_service.rs  terminal_backend_state.rs  terminal_daemon_control_link.rs  terminal_daemon_event_bridge.rs  terminal_daemon_lifecycle.rs  web_access_lifecycle.rs
src-tauri/tests/: start_runner_integration.rs
web/: App.tsx  main.tsx
web/assets/: index.css
web/ccchan/: CCChanApp.test.tsx  CCChanApp.tsx  ChatPanel.test.tsx  ChatPanel.tsx  ContextMenu.tsx  SpritePet.tsx  ccchanLayout.test.ts  ccchanLayout.ts  types.ts
web/components/: ActivityBar.test.tsx  ActivityBar.tsx  BorderlessFloatingButton.test.tsx  DiffView.test.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GitCloneDialog.test.tsx  GitCloneDialog.tsx  JournalPanel.test.tsx  LayoutBar.test.tsx  LayoutBar.tsx  LayoutSwitcherWindow.test.tsx  LayoutSwitcherWindow.tsx  LocalHistoryPanel.test.tsx  MiniView.test.tsx  MiniView.tsx  OnboardingGuide.test.tsx  PlansPanel.test.tsx  PopupTerminalWindow.test.tsx  RecentChangesPanel.test.tsx  RecentFilesPicker.test.tsx  ScanImportDialog.test.tsx  SelfChatPanel.test.tsx  SessionCleanerPanel.test.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.test.tsx  StatusBar.tsx  StatusIndicator.test.tsx  StatusIndicator.tsx  TitleBar.test.tsx  TitleBar.tsx  TodoPanel.test.tsx  WebAuthGate.test.tsx  WebAuthGate.tsx  WorktreeManager.test.tsx  WorktreeManager.tsx
web/contexts/: LayoutVisibilityContext.tsx
web/hooks/: useCliTools.test.ts  useLaunchWarnings.test.tsx  useLaunchWarnings.ts  useLayoutSwitcherSync.test.tsx  useLayoutSwitcherSync.ts  useOrchestratorListener.test.tsx  useOrchestratorListener.ts  (+9 more)
(+433 files in other folders)
