[package]
name = "cc-cli-adapters"
version = "0.1.0"
edition = "2021"
description = "CLI tool adapter layer for CC-Panes"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
which = "7"
tracing = "0.1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
