[package]
name = "cc-panes-cli-hook"
version = "0.94.0"
edition = "2021"
description = "Shared CLI hook runner for CC-Panes"

[[bin]]
name = "cc-panes-cli-hook"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
chrono = "0.4"
ureq = "3"
url = "2"
