[package]
name = "cc-panes-daemon"
version = "0.1.0"
description = "CC-Panes local terminal daemon"
authors = ["wuxiran"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
cc-cli-adapters = { path = "../cc-cli-adapters" }
cc-panes-core = { path = "../cc-panes-core" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
parking_lot = "0.12"

[dev-dependencies]
tower = "0.5"
