[package]
name = "cc-panes-web"
version = "0.1.0"
description = "CC-Panes Web terminal server for Docker deployment"
authors = ["wuxiran"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
cc-panes-core = { path = "../cc-panes-core" }
cc-cli-adapters = { path = "../cc-cli-adapters" }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
clap = { version = "4", features = ["derive", "env"] }
mime_guess = "2"
futures-util = "0.3"
parking_lot = "0.12"
dirs = "6"
anyhow = "1"
tokio-tungstenite = "0.27"
urlencoding = "2"
encoding_rs = "0.8"
