[package]
name = "cc-panes"
version = "0.10.10"
description = "CC-Panes - Multi-instance split-pane manager for Claude Code"
authors = ["wuxiran"]
license = "GPL-3.0"
repository = "https://github.com/wuxiran/cc-panes"
homepage = "https://github.com/wuxiran/cc-panes"
keywords = ["claude-code", "terminal", "split-pane", "tauri"]
categories = ["development-tools", "gui"]
edition = "2021"

[lib]
name = "cc_panes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cc-panes-core = { path = "../cc-panes-core" }
cc-memory = { path = "../cc-memory" }
cc-cli-adapters = { path = "../cc-cli-adapters" }
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
which = "7"
notify = "7"
sha2 = "0.10"
walkdir = "2"
toml = "0.8"
urlencoding = "2"
similar = "2"
flate2 = "1"
encoding_rs = "0.8"
strip-ansi-escapes = "0.2"
trash = "5"
portable-pty = "0.8"
parking_lot = "0.12"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
rand = "0.8"
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"
nucleo-matcher = "0.3"
xcap = "0.8"
image = "0.25"
base64 = "0.22"
arboard = { version = "3", features = ["wayland-data-control"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-updater = ">=2.10"
# 启用 system-proxy feature，通过 Cargo feature unification
# 让 tauri-plugin-updater 内部的 reqwest 获得读取 Windows/macOS 系统代理配置的能力
# 注意：环境变量代理（HTTP_PROXY/HTTPS_PROXY）由 reqwest 基础的 client-proxy 提供，无需此 feature
# 要求 tauri-plugin-updater >=2.10（2.10 起依赖 reqwest 0.13，与此处版本一致才能触发 feature 合并）
reqwest = { version = "0.13", default-features = false, features = ["system-proxy", "json", "rustls"] }
tauri-plugin-process = "2"
tracing = "0.1"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6.4"
objc2-app-kit = "0.3"
objc2-web-kit = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
